left align fix

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
       height: 45px;
       color: white;
       text-overflow: ellipsis;
+      text-align: left;
 }
 
 .text p {
